# AI-TRIP-PLANNNER

./: .gitignore  README.md  pyproject.toml  setup.py
agent/: agentic_workflow.py
notebook/: experiments.ipynb
utils/: model_loader.py
