[project]
name = "ai-trip-plannner"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.128.0",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
]

[tool.uv.workspace]
members = [
    ".",
]

[tool.uv.sources]
ai-trip-plannner = { workspace = true }

[dependency-groups]
dev = [
    "ai-trip-plannner",
    "fastapi>=0.128.0",
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langchain-community>=0.4.1",
    "langchain-experimental>=0.4.1",
    "langchain-google-community[places]>=3.0.5",
    "langchain-groq>=1.1.2",
    "langchain-openai>=1.1.7",
    "langchain-tavily>=0.2.17",
    "langgraph>=1.0.7",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
    "streamlit>=1.53.1",
    "uvicorn>=0.40.0",
]
